--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -177,6 +177,7 @@ footer {
   display: flex;
   flex-direction: column;
   max-height: calc(100vh);
+  /* max-width: 1000px; */
   overflow-y: auto;
   overflow-x: hidden;
   transition: margin-left 0.3s ease;
@@ -187,12 +188,23 @@ footer {
 }
 
 .content {
-  padding: 24px;
+  max-width: 1000px;
+  /* set the maximum width */
+  padding: 0 20px;
+  /* add padding to the left and right sides */
+  box-sizing: border-box;
+  /* include the padding in the width calculation */
 }
 
 @media (max-width: 600px) {
   #content {
     padding: 12px;
+  }
+}
+
+@media (max-width: 1200px) {
+  #content {
+    padding: calc(100vw-1200px);
   }
 }
 
